<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group
    android:checkableBehavior="single">
    <item
      android:id="@+id/navigation_menu_home"
      android:icon="@drawable/ic_home_dark"
      android:title="@string/home"/>
    <item
      android:id="@+id/navigation_menu_manage"
      android:icon="@drawable/ic_manage_dark"
      android:title="@string/manage"/>
    <item
      android:id="@+id/navigation_menu_setting"
      android:icon="@drawable/ic_settings_dark"
      android:title="@string/settings"/>
  </group>

  <group
    android:checkableBehavior="single">
    <item
      android:id="@+id/navigation_menu_logout"
      android:icon="@drawable/ic_logout_dark"
      android:title="@string/logout"/>
  </group>

</menu>
