<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_marginBottom="@dimen/activity_vertical_margin">

  <TextView
    android:id="@+id/request_item_name"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:singleLine="true"
    android:text="@string/placeholder"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/request_item_timestamp"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="@dimen/default_view_margin"
    android:layout_marginEnd="@dimen/default_view_margin"
    android:layout_marginBottom="@dimen/default_view_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/request_item_name"
    android:text="@string/placeholder"
    android:textColor="@color/colorAccent"/>
  <net.frostedbytes.android.whereareyou.views.TouchableImageView
    android:id="@+id/request_item_accept"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:background="@android:color/holo_green_dark"
    android:contentDescription="@string/accept_request"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/request_item_decline"
    app:layout_constraintTop_toBottomOf="@id/request_item_name"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/ic_accept_dark"/>
  <net.frostedbytes.android.whereareyou.views.TouchableImageView
    android:id="@+id/request_item_decline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:background="@android:color/holo_red_dark"
    android:contentDescription="@string/decline_request"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/request_item_delete"
    app:layout_constraintTop_toBottomOf="@id/request_item_name"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/ic_decline_dark"/>
  <net.frostedbytes.android.whereareyou.views.TouchableImageView
    android:id="@+id/request_item_delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/delete_request"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/request_item_name"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/ic_delete_dark"/>

</android.support.constraint.ConstraintLayout>